Fixed mobile bug with the heading spacing

--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -18,6 +18,8 @@
 	
 	aside {
 		h1 {
+			height: auto;
+			line-height: 1em;
 			position: absolute;
 			top: 25pt;
 			left: 10pt;
